Fix z-index in alert and modal to prevent stacking conflicts

--- a/styles/_componets.scss
+++ b/styles/_componets.scss
@@ -277,7 +277,7 @@ body{
 }
 
 //Estilos modal
-.overlay{
+.overlayModal{
     background-color: rgba(15, 15, 20, 0.6); 
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px); 
@@ -480,6 +480,18 @@ body{
 
 //Estilos alert
 //Alert
+.overlayAlert{
+    background-color: rgba(15, 15, 20, 0.6); 
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px); 
+    opacity: 0;
+    transition: opacity 0.4s ease;
+
+    &.active {
+        opacity: 1;
+    }
+}
+
 .containerAlert{
     background-color: #222;
     border-radius: 1rem;
